# pyhf-benchmark

./: .bumpversion.cfg  .coveragerc  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml
binder/: postBuild
docs/: .ackrc  Makefile
docs/source/: api.rst  cli.rst  conf.py  development.rst  examples.rst  index.rst
docs/source/_templates/: modifierclass.rst
docs/source/examples/notebooks/: demo.ipynb
docs/source/exts/: xref.py
examples/: example.py
scripts/: interpolation.py  jsonlfile.py  manager.py  plot.py  run.py  runweb.py  stats.py  util.py
scripts/flaskdemo/: __init__.py  routes.py
scripts/flaskdemo/static/css/: main.css
scripts/flaskdemo/static/js/: lineChart.js  main.js
scripts/flaskdemo/templates/: base.html  home.html  tmp.html
src/: run.py
src/pyhf_benchmark/: commandline.py  jsonlfile.py  load.py  manager.py  mle.py  plot.py  run.py  stats.py  util.py  version.py
src/pyhf_benchmark/cli/: __init__.py  cli.py
tests/: test_cli.py  test_import.py  test_jsonfile.py  test_load.py  test_mle.py  test_plot.py  test_stats.py
